# F_Brain

./: .dockerignore  .env  .gitignore  CD.txt  README.md  docker-compose.override.yml  docker-compose.yml  fichier_commun.txt  grafana.ini  test_cd.txt
.github/workflows/: cd-promote-dev.yml  cd.yml  ci-docker-build.yml  ci.yml
client/: Dockerfile  package.json
client/src/: App.jsx  api.js  index.css
client/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  PasswordReset.jsx  Register.jsx
clients/: Dockerfile
monitoring/: Dockerfile  prometheus.yml
proxy/: Dockerfile  default.conf  nginx.conf
reverse-proxy/: nginx.conf
server/: Dockerfile  pyproject.toml
server/auth_sec/: models.py  urls.py  views.py
server/my_project/: __init__.py  celery.py  settings.py  urls.py
