[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "modeste2022",email = "landry.monthe@facsciences-uy1.cm"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "amqp (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
